--- a/app/views/attractions/_attraction.html.erb
+++ b/app/views/attractions/_attraction.html.erb
@@ -1,22 +1,26 @@
-<li class="day_detail" id="day-detail_<%= attraction.index %>">
-  <div class="transport-time">
-    <div class="day-transfer icn-driving">1.5 km &nbsp;/&nbsp; 2 min</div>
-  </div>
-  <input type="hidden" id="attraction_index" value="<%= attraction.index %>">
-  <div class="day-place-detail">
-    <div class="col-md-3">
-      <%= image_tag(attraction.image_url, height: '50', width: '50', style: 'vertical-align: bottom', class: 'img-circle') %>
-    </div>
+<%= link_to attraction.place do %>
+    <li class="day_detail" id="day-detail_<%= attraction.index %>">
+      <div class="transport-time">
+        <div class="day-transfer icn-driving">1.5 km &nbsp;/&nbsp; 2 min</div>
+      </div>
+      <input type="hidden" id="attraction_index" value="<%= attraction.index %>">
+      <div class="day-place-detail">
+        <div class="col-md-3">
+          <%= image_tag(attraction.image_url, height: '50', width: '50', style: 'vertical-align: bottom', class: 'img-circle') %>
+        </div>
 
-    <div class="col-md-6 day-place-detail-middle">
-      <p class="day-place-name"><%= attraction.title %></p>
-      <h3 class="tag"><%= attraction.hour_spend %> hour</h3>
-    </div>
+        <div class="col-md-6 day-place-detail-middle">
+          <p class="day-place-name"><%= attraction.title %></p>
+          <h3 class="tag"><%= attraction.hour_spend %> hour</h3>
+        </div>
 
-    <div class="col-md-3 text-right remove-itinerary">
-      <a href="#" id="remove-itinerary_<%= attraction.index %>" rel="day-detail_<%= attraction.index %>">
-        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-      </a>
-    </div>
-  </div>
-</li>
+        <div class="col-md-3 text-right remove-itinerary">
+          <%= link_to schedule_day_attraction_path(attraction.schedule_day, attraction),
+                      id: "remove-itinerary_#{attraction.index}", rel: "day-detail_#{attraction.index}",
+                      remote: true, method: :delete do %>
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <% end %>
+        </div>
+      </div>
+    </li>
+<% end %>
