Add Friend Function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -477,3 +477,8 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     cursor: pointer;
   }
 }
+
+.add_friend_result_wraper{
+  display: inline-block;
+  padding-right: 10px;
+}
