--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -15,6 +15,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="#" data-toggle="modal" data-target="#trip-form">New Trip</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#friend-form">Add Friend</a></li>
                 <li><%= link_to 'Logout', sessions_path, method: :delete %></li>
                 <li><%= link_to 'Profile', edit_user_path(current_user_id), method: :get %></li>
               </ul>
@@ -32,4 +33,5 @@
   <%= render 'sessions/new' %>
   <%= render 'users/new' %>
   <%= render 'trips/new_basic' %>
+  <%= render 'friend_relations/new' %>
 </div>
