Put result_user_search into users/

--- a/app/views/friend_relations/_new.html.erb
+++ b/app/views/friend_relations/_new.html.erb
@@ -36,29 +36,10 @@ aria-hidden="true" xmlns="http://www.w3.org/1999/html">
 			$('#selected_users').append("<p>" + $(this).val() + "</p>");
 			$.ajax({
 				method: 'GET',
-				url: '/users/available_friends',
+				url: '/users/available_friends.js',
 				data: { search_data: $('#search_data').val() },
 				success: function (data){
 					console.log(data);
-
-					$('#result_users').empty();
-					$('#result_users').append("<hr>");
-					for (var i = 0; i < data.length; i++) {
-						$('#result_users').append("<div class='add_friend_result_wraper' id='user#" + data[i].id + "'><span class='result_name'>" + data[i].name + "</span><span class='result_id' style='display: none'>"+ data[i].id +"</span><button class='add_to_query'>Add</button></div>");
-					}
-
-					$('#result_users .add_friend_result_wraper .add_to_query').on('click', function(){
-						$(this).parent().remove();
-
-						$.ajax({
-							type: "POST",
-							url: '/friend_relations',
-							data: { 'target_id': $(this).parent().find('.result_id').text() },
-							success: function (){
-								    alert('success');
-							}
-						});
-					});
 				}
 			});
 		}
