--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -482,3 +482,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   display: inline-block;
   padding-right: 10px;
 }
+
+.result_name{
+  margin-right: 3px;
+}
