--- a/app/views/attractions/create.js.erb
+++ b/app/views/attractions/create.js.erb
@@ -1,1 +1,6 @@
-$("#sortable_<%= @attraction %>").append('<%= j(render 'attractions/attraction', attraction: @attraction) %>');
+$("#place_<%= @attraction.schedule_day.index %>").val('');
+<% if @attraction.persisted? %>
+  $("#sortable_<%= @attraction.schedule_day_id %>").append(
+      '<%= j(render 'attractions/attraction', attraction: @attraction) %>'
+  );
+<% end %>
