--- a/app/views/schedule_days/sort.js.erb
+++ b/app/views/schedule_days/sort.js.erb
@@ -1,1 +1,1 @@
-$('#day<%= @schedule_day.id %>').replaceWith('<%= j(render @schedule_day) %>');
+$('#sortable_<%= @schedule_day.index %>').html('<%= j(render @schedule_day.attractions) %>');
