--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -22,8 +22,8 @@
           </ul>
       <% else %>
           <div class="top-before-login">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#login-form">Login</button>
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#register-form">Register</button>
+            <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
+            <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
           </div>
       <% end %>
     </div>
