--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -2,55 +2,63 @@
   <%= form_for @trip, method: :put do |_| %>
       <%= render 'share/model_error', object: @trip %>
       <div>
-        <div class="col-md-4">
-          <%= image_tag(asset_path("travel_colorful.jpg"), width: "270") %>
-        </div>
-        <div class="col-md-8">
+
+        <div class="container trip-basic-info-form">
           <h2 class="fs-title">Trip Basic Information</h2>
-          <fieldset class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
-          </fieldset>
+          <div class="row">
+            <div class="col-md-6">
+              <fieldset class="form-group">
+                <label for="title">Title</label>
+                <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
+              </fieldset>
+            </div>
+            <div class="col-md-6">
+              <fieldset class="form-group">
+                <label for="expected_budget">Expected Budget</label>
+                <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
+                       placeholder="Enter expected budget" name="trip[expected_budget]">
+              </fieldset>
+            </div>
+          </div>
 
-          <fieldset class="form-group">
-            <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="3" name="trip[description]"
-                      placeholder="Enter description"><%= @trip.description %></textarea>
-          </fieldset>
-
-          <fieldset class="form-group">
-            <label for="expected_budget">Expected Budget</label>
-            <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
-                   placeholder="Enter expected budget" name="trip[expected_budget]">
-          </fieldset>
-
-          <fieldset class="form-group">
-            <label>Participants</label>
-            <ul id="participantTags">
-            </ul>
-            <%= hidden_field_tag 'participant' %>
-          </fieldset>
-
-          <fieldset class="form-group">
-            <label>Starting Information</label>
-            <div class="col-md-12">
-              <div class="col-md-6" id="trip-departure-id">
+          <div class="row">
+            <div class="col-md-6">
+              <fieldset class="form-group">
+                <label for="departures">Starting Information</label>
+                <div id="trip-departure-id">
                 <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
-                       name="trip[departure]" placeholder="Departure" id="departure">
-              </div>
-
-              <div class="col-md-6">
+                           name="trip[departure]" placeholder="Departure" id="departure">
+                  </div>
+              </fieldset>
+            </div>
+            <div class="col-md-6">
+              <fieldset class="form-group">
+                <label for="start-date">Start Date</label>
                 <input title="Start Date" type="text" class="form-control datetimepicker"
                        value="<%= @trip.start_date.try(:strftime, '%d-%m-%Y') %>"
-                       name="trip[start_date]" id="start-date" placeholder="Enter Start Date"/>
-              </div>
+                       name="trip[start_date]" id="" placeholder="Enter Start Date"/>
+              </fieldset>
             </div>
-          </fieldset>
+          </div>
+          <div>
+            <fieldset class="form-group">
+              <label>Participants</label>
+              <ul id="participantTags">
+              </ul>
+              <%= hidden_field_tag 'participant' %>
+            </fieldset>
+          </div>
+          <div>
+            <fieldset class="form-group">
+              <label for="description">Description</label>
+            <textarea class="form-control" id="description" rows="3" name="trip[description]"
+                      placeholder="Enter description"><%= @trip.description %></textarea>
+            </fieldset>
+          </div>
         </div>
       </div>
 
-      <input type="submit" name="save" class="btn btn-primary" value="Save"/>
-      <input type="button" name="next" class="next action-button" value="Next"/>
+      <input type="submit" name="save" class="btn save-btn next" value="Save & Next"/>
   <% end %>
 
   <script>
