--- a/app/views/attractions/create.js.erb
+++ b/app/views/attractions/create.js.erb
@@ -1,5 +1,8 @@
-$("#place_<%= @attraction.schedule_day.index %>").val('');
-<% if @attraction.persisted? %>
+<% if @attraction %>
+  $("#place_<%= @attraction.schedule_day.index %>").val('');
+<% end %>
+
+<% if @attraction && @attraction.persisted? %>
   $("#sortable_<%= @attraction.schedule_day_id %>").append(
       '<%= j(render 'attractions/attraction', attraction: @attraction) %>'
   );
