--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -7,39 +7,7 @@
           <%= render schedule_day.attractions %>
         </ul>
 
-        <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
-                     class: 'form-horizontal form-schedule form-card',
-                     id: "form-schedule_#{schedule_day.index}" do %>
-
-            <!-- Place to go to -->
-            <div class="form-group">
-              <label for="attraction_<%= schedule_day.index %>" class="control-label">
-                Tourist Attraction:
-              </label>
-              <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
-                     id="attraction_<%= schedule_day.index %>">
-              <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
-            </div>
-
-            <!-- Spending hours -->
-            <div class="form-group">
-              <label for="spendingTime_<%= schedule_day.index %>" class="control-label">
-                Hours spending:
-              </label>
-              <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
-            </div>
-
-            <!-- Submit button -->
-            <div class="form-group">
-              <button type="submit" class="btn addItineraryBtn">Add to itinerary</button>
-            </div>
-        <% end %>
+        <button type="button" class="btn" id="addAttractionItineraryBtn" data-toggle="modal" data-target="#add-to-itinerary-form_<%= schedule_day.index %>">Add Attraction</button>
 
 
       </div>
@@ -48,28 +16,90 @@
   </div>
 </div>
 
+
+<!--trip form itinerary-->
+<div class="modal fade add-to-itinerary-form" id="add-to-itinerary-form_<%= schedule_day.index %>" tabindex="-1" role="dialog" aria-labelledby="addToItineraryFormLabel"
+     aria-hidden="true" xmlns="http://www.w3.org/1999/html">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h2 class="modal-title" id="addToItineraryFormLabel">Add Attraction to Itinerary</h2>
+      </div>
+      <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
+                   class: 'form-horizontal form-schedule form-card',
+                   id: "form-schedule_#{schedule_day.index}" do %>
+
+          <!-- Place to go to -->
+          <div class="form-group">
+            <label for="attraction_<%= schedule_day.index %>" class="form-control-label">
+              Tourist Attraction:
+            </label>
+            <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
+                   id="attraction_<%= schedule_day.index %>">
+            <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
+          </div>
+
+          <!-- Spending hours -->
+          <div class="form-group">
+            <label for="spendingTime_<%= schedule_day.index %>" class="form-control-label">
+              Hours spending:
+            </label>
+            <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+
+          <!-- Submit button -->
+          <div class="form-group">
+            <button type="submit" class="btn addItineraryBtn">Add to itinerary</button>
+          </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+<!--end-->
+
+
 <script>
   // Typehead
-  var placeIds = <%= raw @place_ids.to_json %>;
-  var placeNames = <%= raw @place_names.to_json %>;
-  var states = new Bloodhound({
-    datumTokenizer: Bloodhound.tokenizers.whitespace,
+  var places = <%= raw @places.to_json %>
+  var placeEngine = new Bloodhound({
+    datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
     queryTokenizer: Bloodhound.tokenizers.whitespace,
-    local: placeNames
+    identify: function(obj) { return obj.id; },
+    local: places
   });
   $('#attraction_<%= schedule_day.index %>').bind('typeahead:select', function (ev, suggestion) {
-    $("#place_<%= schedule_day.index %>").val(placeIds[placeNames.indexOf(suggestion)]);
+    $("#place_<%= schedule_day.index %>").val(placeIds[placeNames.indexOf(suggestion.id)]);
   });
 
-  $('#attraction_<%= schedule_day.index %>').typeahead({
+  $('#attraction_<%= schedule_day.index %>').typeahead(
+      {
         hint: true,
         highlight: true,
         minLength: 1
       },
       {
         name: 'states',
-        source: states
-      });
+        source: placeEngine,
+        display: 'name',
+        templates: {
+          suggestion: Handlebars.compile("<div class='dropdown-suggestion'><div class='dropdown-suggestion-image'><image src='{{photo_url}}' width='50' height='50' class='img-circle' /></div><div class='dropdown-suggestion-name'>{{name}}</div></div>")
+        }
+      }
+  );
+
+  $('#attraction_<%= schedule_day.index %>').on('typeahead:render', function(e, suggestions, asyncFlag, setName) {
+    console.log(suggestions);
+
+  });
 
   // Sort attraction
   $("#sortable_<%= schedule_day.index %>").sortable();
