improve UX UI and performance, finish second screen

--- a/app/views/attractions/_attraction.html.erb
+++ b/app/views/attractions/_attraction.html.erb
@@ -25,4 +25,10 @@
         </div>
       </div>
     </li>
+
+    <script>
+      $('#remove-itinerary_<%= attraction.index %>').click(function () {
+        showLoading();
+      })
+    </script>
 <% end %>
