--- a/app/views/attractions/create.js.erb
+++ b/app/views/attractions/create.js.erb
@@ -1,8 +1,6 @@
-<% if @attraction %>
-  $("#place_<%= @attraction.schedule_day.index %>").val('');
-<% end %>
-
 <% if @attraction && @attraction.persisted? %>
+  $("#place_<%= @attraction.schedule_day.index %>").val('');
+  $("#add-to-itinerary-form_<%= @attraction.schedule_day.index %>").modal('hide');
   $("#sortable_<%= @attraction.schedule_day_id %>").append(
       '<%= j(render 'attractions/attraction', attraction: @attraction) %>'
   );
