--- a/app/views/schedule_days/_li_schedule_day.html.erb
+++ b/app/views/schedule_days/_li_schedule_day.html.erb
@@ -1,3 +1,5 @@
-<li class="<%= day.default_active %>" id="li-day<%= day.index %>">
-  <a href="#day<%= day.index %>" data-toggle="tab" class="days-tab font-normal"><%= day.title %></a>
+<li class="<%= schedule_day.default_active %>" id="li-day<%= schedule_day.index %>">
+  <a href="#day<%= schedule_day.index %>" data-toggle="tab">
+    <%= schedule_day.title %>
+  </a>
 </li>
