--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,47 +1,57 @@
-
 <!-- multistep form -->
 <div id="msform">
   <!-- progressbar -->
-    <ul id="progressbar">
-      <li class="active">Basic Info</li>
-      <li>Itinerary</li>
-      <li>Budget Plan</li>
-      <li>Todo</li>
-      <li>Attachment</li>
-    </ul>
-
+  <ul id="progressbar">
+    <li class="active">Basic Info</li>
+    <li>Itinerary</li>
+    <li>Budget Plan</li>
+    <li>Todo</li>
+    <li>Attachment</li>
+  </ul>
 
   <!-- fieldsets -->
-  <%= render 'trips/basic_info' %>
-  <%= render 'trips/itinerary' %>
-  <%= render 'trips/budget_plan' %>
-  <%= render 'trips/todo' %>
-  <%= render 'trips/attachment' %>
+  <div class="form-slide" id="basic_info">
+    <%= render 'trips/basic_info' %>
+  </div>
+
+  <div class="form-slide" id="itinerary">
+  </div>
+
+  <div class="form-slide" id="budget_plan">
+    <%= render 'trips/budget_plan' %>
+  </div>
+
+  <div class="form-slide" id="todo">
+    <%= render 'trips/todo' %>
+  </div>
+
+  <div class="form-slide" id="attachment">
+    <%= render 'trips/attachment' %>
+  </div>
 </div>
 
 <script>
   $(document).ready(function () {
-    //jQuery time
-    var current_fs, next_fs, previous_fs; //fieldsets
-    var left, opacity, scale; //fieldset properties which we will animate
-    var animating; //flag to prevent quick multi-click glitches
+    hideLoading();
+
+    // jQuery time
+    var current_fs = $('#basic_info'), next_fs, previous_fs; // fieldsets
+    var left, opacity, scale; // fieldset properties which we will animate
+    var animating; // flag to prevent quick multi-click glitches
 
     $(".next").click(function (e) {
       e.preventDefault();
+      nextScreen();
+    });
+
+    moveToNextScreen = function () {
       if (animating) return false;
       animating = true;
-
-      current_fs = $(this).parent().parent();
-      next_fs = $(this).parent().parent().next();
-
-      //activate next step on progressbar using the index of next_fs
+      next_fs = current_fs.next();
       $("#progressbar li").eq($(".form-slide").index(next_fs)).addClass("active");
-
-      //show the next form-slide
       next_fs.fadeIn(800);
       current_fs.fadeOut(800);
-      //hide the current form-slide with style
-    });
+    };
 
     $(".previous").click(function () {
       if (animating) return false;
