--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -1,144 +1,149 @@
-<div class="form-slide">
-  <%= form_for @trip, method: :put do |_| %>
-      <%= render 'share/model_error', object: @trip %>
-      <div>
+<%= form_for @trip, method: :put, remote: true do |_| %>
+    <div>
+      <div class="container trip-basic-info-form">
+        <h2 class="fs-title">Trip Basic Information</h2>
 
-        <div class="container trip-basic-info-form">
-          <h2 class="fs-title">Trip Basic Information</h2>
-          <div class="row">
-            <div class="col-md-6">
-              <fieldset class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
-              </fieldset>
-            </div>
-            <div class="col-md-6">
-              <fieldset class="form-group">
-                <label for="expected_budget">Expected Budget</label>
-                <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
-                       placeholder="Enter expected budget" name="trip[expected_budget]">
-              </fieldset>
-            </div>
-          </div>
+        <div id="trip-error">
+          <%= render 'share/model_error', object: @trip %>
+        </div>
 
-          <div class="row">
-            <div class="col-md-6">
-              <fieldset class="form-group">
-                <label for="departures">Starting Information</label>
-                <div id="trip-departure-id">
-                <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
-                           name="trip[departure]" placeholder="Departure" id="departure">
-                  </div>
-              </fieldset>
-            </div>
-            <div class="col-md-6">
-              <fieldset class="form-group">
-                <label for="start-date">Start Date</label>
-                <input title="Start Date" type="text" class="form-control datetimepicker"
-                       value="<%= @trip.start_date.try(:strftime, '%d-%m-%Y') %>"
-                       name="trip[start_date]" id="" placeholder="Enter Start Date"/>
-              </fieldset>
-            </div>
-          </div>
-          <div>
+        <div class="row">
+          <div class="col-md-6">
             <fieldset class="form-group">
-              <label>Participants</label>
-              <ul id="participantTags">
-              </ul>
-              <%= hidden_field_tag 'participant' %>
+              <label for="title">Title</label>
+              <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
             </fieldset>
           </div>
-          <div>
+          <div class="col-md-6">
             <fieldset class="form-group">
-              <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="3" name="trip[description]"
-                      placeholder="Enter description"><%= @trip.description %></textarea>
+              <label for="expected_budget">Expected Budget</label>
+              <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
+                     placeholder="Enter expected budget" name="trip[expected_budget]">
             </fieldset>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <fieldset class="form-group">
+              <label for="departures">Starting Information</label>
+              <div id="trip-departure-id">
+                <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
+                       name="trip[departure]" placeholder="Departure" id="departure">
+              </div>
+            </fieldset>
+          </div>
+          <div class="col-md-6">
+            <fieldset class="form-group">
+              <label for="start-date">Start Date</label>
+              <input title="Start Date" type="text" class="form-control datetimepicker"
+                     value="<%= @trip.start_date.try(:strftime, '%d-%m-%Y') %>"
+                     name="trip[start_date]" id="" placeholder="Enter Start Date"/>
+            </fieldset>
+          </div>
+        </div>
+        <div>
+          <fieldset class="form-group">
+            <label>Participants</label>
+            <ul id="participantTags">
+            </ul>
+            <%= hidden_field_tag 'participant' %>
+          </fieldset>
+        </div>
+        <div>
+          <fieldset class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" rows="3" name="trip[description]"
+                      placeholder="Enter description"><%= @trip.description %></textarea>
+          </fieldset>
+        </div>
       </div>
+    </div>
 
-      <input type="submit" name="save" class="btn save-btn next" value="Save & Next"/>
-  <% end %>
+    <input type="submit" name="save" class="btn save-btn" id="update_trip" value="Save & Next"/>
+<% end %>
 
-  <script>
-    // datetime picker
-    $('.datetimepicker').datetimepicker({
-      format: 'DD-MM-YYYY'
-    });
+<script>
+  $('#update_trip').click(function () {
+    showLoading();
+  });
 
-    // friends tag
+  // datetime picker
+  $('.datetimepicker').datetimepicker({
+    format: 'DD-MM-YYYY'
+  });
+
+  // friends tag
+  $.ajax({
+    method: 'GET',
+    url: '/users/friends',
+    success: function (data) {
+      $('#participantTags').tagit({
+        availableTags: data.map(function (user) {
+          return user.name
+        }),
+        singleField: true,
+        singleFieldNode: $('#participant')
+      });
+
+      <% @trip.users.each do |user| %>
+      $("#participantTags").tagit("createTag", "<%= user.name %>");
+      <% end %>
+
+      $('#participantTags').tagit({
+        beforeTagRemoved: function (event, ui) {
+          removeTag(ui.tagLabel);
+        },
+        afterTagAdded: function (event, ui) {
+          addTag(ui.tagLabel);
+        }
+      })
+    }
+  });
+
+  // Remove tag
+  removeTag = function (tagLabel) {
     $.ajax({
-      method: 'GET',
-      url: '/users/friends',
+      method: 'DELETE',
+      url: '/user_trips',
+      data: {trip_id: '<%= @trip.id %>', tag: tagLabel},
       success: function (data) {
-        $('#participantTags').tagit({
-          availableTags: data.map(function (user) {
-            return user.name
-          }),
-          singleField: true,
-          singleFieldNode: $('#participant')
-        });
+      }
+    });
+  };
 
-        <% @trip.users.each do |user| %>
-          $("#participantTags").tagit("createTag", "<%= user.name %>");
-        <% end %>
+  // Add tag
+  addTag = function (tagLabel) {
+    $.ajax({
+      method: 'POST',
+      url: '/user_trips',
+      data: {trip_id: '<%= @trip.id %>', tag: tagLabel},
+      success: function (data) {
+      }
+    });
+  };
 
-        $('#participantTags').tagit({
-          beforeTagRemoved: function (event, ui) {
-            removeTag(ui.tagLabel);
-          },
-          afterTagAdded: function (event, ui) {
-            addTag(ui.tagLabel);
-          }
+  // Departure
+  $.ajax({
+    method: 'GET',
+    url: '/regions/all',
+    success: function (data) {
+      var states = new Bloodhound({
+        datumTokenizer: Bloodhound.tokenizers.whitespace,
+        queryTokenizer: Bloodhound.tokenizers.whitespace,
+        local: data.map(function (region) {
+          return region.name;
         })
-      }
-    });
-
-    // Remove tag
-    removeTag = function (tagLabel) {
-      $.ajax({
-        method: 'DELETE',
-        url: '/user_trips',
-        data: {trip_id: '<%= @trip.id %>', tag: tagLabel},
-        success: function (data) {
-        }
       });
-    };
-
-    // Add tag
-    addTag = function (tagLabel) {
-      $.ajax({
-        method: 'POST',
-        url: '/user_trips',
-        data: {trip_id: '<%= @trip.id %>', tag: tagLabel},
-        success: function (data) {
-        }
-      });
-    };
-
-    // Departure
-    $.ajax({
-      method: 'GET',
-      url: '/regions/all',
-      success: function (data) {
-        var states = new Bloodhound({
-          datumTokenizer: Bloodhound.tokenizers.whitespace,
-          queryTokenizer: Bloodhound.tokenizers.whitespace,
-          local: data.map(function (region) {
-            return region.name;
-          })
-        });
-        $('#departure').typeahead({
-              hint: true,
-              highlight: true,
-              minLength: 1
-            },
-            {
-              name: 'states',
-              source: states
-            });
-      }
-    });
-  </script>
-</div>
+      $('#departure').typeahead({
+            hint: true,
+            highlight: true,
+            minLength: 1
+          },
+          {
+            name: 'states',
+            source: states
+          });
+    }
+  });
+</script>
