--- a/app/views/attractions/create.js.erb
+++ b/app/views/attractions/create.js.erb
@@ -1,7 +1,7 @@
 <% if @attraction && @attraction.persisted? %>
   $("#place_<%= @attraction.schedule_day.index %>").val('');
   $("#add-to-itinerary-form_<%= @attraction.schedule_day.index %>").modal('hide');
-  $("#sortable_<%= @attraction.schedule_day_id %>").append(
+  $("#sortable_<%= @attraction.schedule_day.index %>").append(
       '<%= j(render 'attractions/attraction', attraction: @attraction) %>'
   );
 <% end %>
