--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -1,5 +1,4 @@
 <div class="tab-pane fade in <%= schedule_day.index == 1 && 'active' %> days-tab" id="day<%= schedule_day.index %>">
-
   <!-- Attractions -->
   <div class="col-md-3">
     <div class="schedule-form">
@@ -19,7 +18,7 @@
 
   <!-- Map -->
   <div class="col-md-9">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d501702.60423629143!2d106.41416161190841!3d10.768999960193561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529292e8d3dd1%3A0xf15f5aad773c112b!2sHo+Chi+Minh+City%2C+Ho+Chi+Minh+70000%2C+Vietnam!5e0!3m2!1sen!2s!4v1460734365430" width="1050" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div id="map<%= schedule_day.index %>" style="width: 100%; height: 400px"></div>
   </div>
 </div>
 
@@ -73,11 +72,42 @@
 </div>
 
 <script>
+  // Map
+  function initialize(mapId) {
+    var mapCanvas = document.getElementById(mapId);
+    var mapOptions = {
+      center: new google.maps.LatLng(21.0278, 105.8342),
+      zoom: 16,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(mapCanvas, mapOptions);
+    <% schedule_day.attractions.each do |attraction| %>
+      var lat = parseFloat("<%= attraction.place.latitude %>");
+      var lng = parseFloat("<%= attraction.place.longitude %>");
+      new google.maps.Marker({
+        position: new google.maps.LatLng(lat, lng),
+        map: map,
+        icon: getImage("<%= attraction.image_url(48) %>"),
+        title: "<%= attraction.place.name %>",
+        center: {lat: lat, lng: lng},
+        radius: 48
+      });
+    <% end %>
+  }
+  function getImage(url) {
+    return {
+      url: encodeURI(url.replace(/&amp;/g, '&')),
+      size: new google.maps.Size(48, 48),
+      origin: new google.maps.Point(0, 0),
+      anchor: new google.maps.Point(24, 24)
+    };
+  }
+  google.maps.event.addDomListener(window, 'load', initialize('map<%= schedule_day.index %>'));
+
   // Typehead
   $('#attraction_<%= schedule_day.index %>').bind('typeahead:select', function (ev, suggestion) {
     $("#place_<%= schedule_day.index %>").val(suggestion.id);
   });
-
   $('#attraction_<%= schedule_day.index %>').typeahead(
       {
         hint: true,
