--- a/app/views/trips/_itinerary.html.erb
+++ b/app/views/trips/_itinerary.html.erb
@@ -13,6 +13,15 @@
     </ul>
   </div>
   <script>
+    // Toggle maps
+    maps = {};
+    $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+      var map = maps[e.target.id];
+      google.maps.event.trigger(map, 'resize');
+      map.setZoom(map.getZoom());
+    });
+
+    // Place engine
     places = <%= raw @places.to_json %>;
     placeEngine = new Bloodhound({
       datumTokenizer: Bloodhound.tokenizers.obj.whitespace('suggest_title'),
