--- a/app/views/attractions/create.js.erb
+++ b/app/views/attractions/create.js.erb
@@ -4,4 +4,5 @@
   $("#sortable_<%= @attraction.schedule_day.index %>").append(
       '<%= j(render 'attractions/attraction', attraction: @attraction) %>'
   );
+  <%= render 'schedule_days/map', schedule_day: @schedule_day %>
 <% end %>
