--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -18,91 +18,62 @@
 
   <!-- Map -->
   <div class="col-md-9">
-    <div id="map<%= schedule_day.index %>" style="width: 100%; height: 400px"></div>
+    <div id="map<%= schedule_day.index %>" style="width: 100%; height: 480px"></div>
   </div>
-</div>
 
-<!-- Attraction Form -->
-<div class="modal fade add-to-itinerary-form" id="add-to-itinerary-form_<%= schedule_day.index %>" tabindex="-1"
-     role="dialog" aria-labelledby="addToItineraryFormLabel"
-     aria-hidden="true" xmlns="http://www.w3.org/1999/html">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h2 class="modal-title" id="addToItineraryFormLabel">Add Attraction to Itinerary</h2>
+  <!-- Attraction Form -->
+  <div class="modal fade add-to-itinerary-form" id="add-to-itinerary-form_<%= schedule_day.index %>" tabindex="-1"
+       role="dialog" aria-labelledby="addToItineraryFormLabel"
+       aria-hidden="true" xmlns="http://www.w3.org/1999/html">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h2 class="modal-title" id="addToItineraryFormLabel">Add Attraction to Itinerary</h2>
+        </div>
+        <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
+                     class: 'form-horizontal form-schedule form-card',
+                     id: "form-schedule_#{schedule_day.index}" do %>
+
+            <!-- Place to go to -->
+            <div class="form-group">
+              <label for="attraction_<%= schedule_day.index %>" class="form-control-label">
+                Tourist Attraction:
+              </label>
+              <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
+                     id="attraction_<%= schedule_day.index %>">
+              <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
+            </div>
+
+            <!-- Spending hours -->
+            <div class="form-group">
+              <label for="spendingTime_<%= schedule_day.index %>" class="form-control-label">
+                Hours spending:
+              </label>
+              <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+            </div>
+
+            <!-- Submit button -->
+            <div class="form-group">
+              <button type="submit" class="btn addItineraryBtn" id="add_itinerary_btn">Add to itinerary</button>
+            </div>
+        <% end %>
       </div>
-      <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
-                   class: 'form-horizontal form-schedule form-card',
-                   id: "form-schedule_#{schedule_day.index}" do %>
-
-          <!-- Place to go to -->
-          <div class="form-group">
-            <label for="attraction_<%= schedule_day.index %>" class="form-control-label">
-              Tourist Attraction:
-            </label>
-            <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
-                   id="attraction_<%= schedule_day.index %>">
-            <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
-          </div>
-
-          <!-- Spending hours -->
-          <div class="form-group">
-            <label for="spendingTime_<%= schedule_day.index %>" class="form-control-label">
-              Hours spending:
-            </label>
-            <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-          </div>
-
-          <!-- Submit button -->
-          <div class="form-group">
-            <button type="submit" class="btn addItineraryBtn" id="add_itinerary_btn">Add to itinerary</button>
-          </div>
-      <% end %>
     </div>
   </div>
 </div>
 
 <script>
   // Map
-  function initialize(mapId) {
-    var mapCanvas = document.getElementById(mapId);
-    var mapOptions = {
-      center: new google.maps.LatLng(21.0278, 105.8342),
-      zoom: 16,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(mapCanvas, mapOptions);
-    <% schedule_day.attractions.each do |attraction| %>
-      var lat = parseFloat("<%= attraction.place.latitude %>");
-      var lng = parseFloat("<%= attraction.place.longitude %>");
-      new google.maps.Marker({
-        position: new google.maps.LatLng(lat, lng),
-        map: map,
-        icon: getImage("<%= attraction.image_url(48) %>"),
-        title: "<%= attraction.place.name %>",
-        center: {lat: lat, lng: lng},
-        radius: 48
-      });
-    <% end %>
-  }
-  function getImage(url) {
-    return {
-      url: encodeURI(url.replace(/&amp;/g, '&')),
-      size: new google.maps.Size(48, 48),
-      origin: new google.maps.Point(0, 0),
-      anchor: new google.maps.Point(24, 24)
-    };
-  }
-  google.maps.event.addDomListener(window, 'load', initialize('map<%= schedule_day.index %>'));
+  <%= render 'schedule_days/map', schedule_day: schedule_day %>
 
   // Typehead
   $('#attraction_<%= schedule_day.index %>').bind('typeahead:select', function (ev, suggestion) {
@@ -128,7 +99,7 @@
       }
   );
 
-  // Sort attraction
+  // Sort attractions
   $("#sortable_<%= schedule_day.index %>").sortable();
   $("#sortable_<%= schedule_day.index %>").disableSelection();
   $("#sortable_<%= schedule_day.index %>").sortable({
