--- a/app/views/schedule_days/create.js.erb
+++ b/app/views/schedule_days/create.js.erb
@@ -9,3 +9,9 @@ $("#day-left-panel").append("<%= j(render 'schedule_days/li_schedule_day', sched
 $("#itinerary-content").append("<%= j(render @schedule_day) %>");
 $("#li-day<%= @schedule_day.index %>").addClass('active');
 $("#day<%= @schedule_day.index %>").addClass('active');
+
+// map
+var map = maps["li_tab<%= @schedule_day.index %>"][0];
+google.maps.event.trigger(map, 'resize');
+map.setZoom(5);
+map.setCenter(new google.maps.LatLng(DEFAULT_LAT_AVG, DEFAULT_LNG_AVG));
