fix merge conflicts

--- a/app/views/notifications/_show.html.erb
+++ b/app/views/notifications/_show.html.erb
@@ -1,36 +1,36 @@
 <div class="notification">
-	<% if userNotification.notification.category.eql? "request" %>
-	<p><b><%= userNotification.sender.name%></b></p>
-	<%= userNotification.notification.description %>
-	<p>
-		<span class="sender_id" style="display: none"><%= userNotification.sender.id%></span>
-		<button class="accept">Accept</button>
-		<button class="deny">Deny</button>
-	</p>
-	<% else %>
-	<% end %>
+  <% if user_notification.notification.category.eql? "request" %>
+      <p><b><%= user_notification.sender.name %></b></p>
+      <%= user_notification.notification.description %>
+      <p>
+        <span class="sender_id" style="display: none"><%= user_notification.sender.id %></span>
+        <button class="accept">Accept</button>
+        <button class="deny">Deny</button>
+      </p>
+  <% else %>
+  <% end %>
 </div>
 
 <script>
-	$('.notification .accept').on('click', function(e){
-		$.ajax({
-			method: 'POST',
-			url: 'friend_relations/confirm',
-			data: { 'target_id': $(this).parent().find('.sender_id').text() },
-			success: function (data){
+  $('.notification .accept').on('click', function (e) {
+    $.ajax({
+      method: 'POST',
+      url: 'friend_relations/confirm',
+      data: {'target_id': $(this).parent().find('.sender_id').text()},
+      success: function (data) {
 
-			}
-		});
-	});
+      }
+    });
+  });
 
-	$('.notification .deny').on('click', function(e){
-		$(this).parent().parent().remove();
-		$.ajax({
-			method: 'POST',
-			url: 'friend_relations/reject',
-			data: { 'target_id': $(this).parent().find('.sender_id').text() },
-			success: function (data){
-			}
-		});
-	});
+  $('.notification .deny').on('click', function (e) {
+    $(this).parent().parent().remove();
+    $.ajax({
+      method: 'POST',
+      url: 'friend_relations/reject',
+      data: {'target_id': $(this).parent().find('.sender_id').text()},
+      success: function (data) {
+      }
+    });
+  });
 </script>
