--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,31 +11,50 @@
 <body>
 
 <% if params[:controller] == 'trips' %>
+
+    <!-- HEADER VIEW -->
     <div class="trip-top-header">
       <div class="container">
         <h1>WE TRIP</h1>
         <span class="slogan">Travel in your way</span>
         <div class="top-right-trip">
-          <%= render 'share/top_right_dropdown' %>
+          <%= render 'share/login_user_menu' %>
         </div>
       </div>
     </div>
-    <%= yield %>
-    <%= render 'share/loading' %>
-<% elsif params[:controller] == 'home' %>
-    <%= yield %>
-<% else %>
-    <%= render 'share/navbar' %>
-    <%= render 'share/search' %>
 
+    <%= yield %>
+
+    <!-- LOADING VIEW -->
+    <%= render 'share/loading' %>
+<% else %>
+    <div class="image-search-home">
+      <div class="container">
+
+        <!-- NAV BAR -->
+        <%= render 'share/navbar' %>
+
+        <!-- CREATE ACTION -->
+        <div class="header text-center">
+          <h1>WE TRIP</h1>
+          <h2>Travel in your way</h2>
+          <button type="button" class="btn" id="createTripBtn" data-toggle="modal" data-target="#trip-form">
+            Create a trip
+          </button>
+        </div>
+      </div>
+
+      <!-- SEARCH ACTION -->
+      <div class="main-search text-center">
+        <%= render 'share/search' %>
+      </div>
+    </div>
+
+    <!-- MAIN ACTION -->
     <div class="container">
       <%= yield %>
     </div>
 <% end %>
-
-<%= render 'sessions/new' %>
-<%= render 'users/new' %>
-<%= render 'trips/new' %>
 
 </body>
 </html>
