--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,6 +1,5 @@
 <% if !current_user.user_notifications.blank? %>
-	<%= render partial: 'notifications/show', collection: current_user.user_notifications , as: :userNotification%>
+    <%= render partial: 'notifications/show', collection: current_user.user_notifications, as: :user_notification %>
 <% else %>
-	You have no notification
+    You have no notification
 <% end %>
-
