--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -1,43 +1,12 @@
-<div class="top-home">
-  <div class="row">
-    <div class="name-center">
-      <h1>WE TRIP</h1>
-    </div>
-    <div class="info-right">
-      <% if sign_in? %>
-          <ul class="nav nav-pills top-after-login">
-            <li>
-              <div class="btn-group">
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Notification
-                </button>
-                <div class="dropdown-menu notification-box">
-                  <%= render 'notifications/notification' %>
-                </div>
-              </div>
-            </li>
-            <li role="presentation" class="dropdown">
-              <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <%= image_tag current_user.avatar, width: 30, class: "img-rounded" %>
-                <div class="username-right-top"><%= current_user.name %></div>
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to 'Logout', sessions_path, method: :delete %></li>
-                <li><%= link_to 'Profile', edit_user_path(current_user_id), method: :get %></li>
-                <li><%= link_to 'Home', root_path %></li>
-              </ul>
-            </li>
-          </ul>
-      <% else %>
-          <div class="top-before-login">
-            <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
-            <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
-          </div>
-      <% end %>
-    </div>
-  </div>
-  <%= render 'sessions/new' %>
-  <%= render 'users/new' %>
-  <%= render 'friend_relations/new' %>
+<div class="home-top">
+  <% if sign_in? %>
+      <%= render 'share/login_user_menu' %>
+  <% else %>
+      <div class="top-before-login text-right">
+        <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
+        <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
+      </div>
+      <%= render 'sessions/new' %>
+      <%= render 'users/new' %>
+  <% end %>
 </div>
